[package]
name = "pef"
version = "0.1.0"
authors = ["lightjacket <https://github.com/lightjacket>"]
edition = "2018"
license = "MIT"
description = "Partioned Elias-Fano encoding for sorted integers"
documentation = "https://github.com/lightjacket/pef"
repository = "https://github.com/lightjacket/pef"
readme = "README.md"

[dependencies]

[dev-dependencies]
flate2 = "1.0"
